--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ body {
 }
 
 .fighter img {
-    height: 90%;
+    height: auto;
     width: 85%;
 }
 
@@ -229,11 +229,11 @@ body {
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
+    font-size: 30px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    font-size: 30px;
 }
 
 .fighterDetails {
